css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*BEGIN HTML BODY STYLING*/
* {
    box-sizing: border-box;
    padding:0
    margin:0;
    max-width: 100%;
}

body {
    line-height: 2;
}

section{
    padding: 1% 0;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 2;
}
/*END HTML BODY STYLING*/

/*BEGIN HEADER STYLING*/
nav {
    display:flex;
    justify-content:center;
    padding: 0 1%;
}

.logo {
    margin: auto;
    padding-top:1%;
    padding-left: 7%;
   
}    

.linksHeader {
    width:80%;
    padding-top: 3%;
    display:flex;
    justify-content:space-evenly;
}

.box {
    display: flex;
    align-items: center;
    justify-content: center;
}

.box img {
    width:85%;
}
/*END HEADER STYLING*/

/*BEGIN TOP CONTENT STYLING*/
.homeContainer {
    display:flex;
    justify-content: center;
    align-content: center;
    margin:1% 0;
}

.homeContainer div {
    width:42%; 
    padding:0 1% ;
}

.homeContainer p {
    text-align:left;
    line-height:2;  
}
/*END TOP CONTENT STYLING*/

/*BEGIN MIDDLE CONTENT STYLING*/
.boxDiv {
    border-top: 1px dashed black;
    border-bottom: 1px dashed black;
    width:90%;
    margin:0 4%;
    padding:1% 0;
}
.boxDiv h2 {
    padding-left: 4%;;
}
.boxDiv .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.boxDiv .boxes .box1 {
    width: 12.5%;
    height: 125px;
    background: teal;
    margin: 20px 2.5%; 
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box2 {
    width: 12.5%;
    height: 125px;
    background: gold;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box3 {
    width: 12.5%;
    height: 125px;
    background: cadetblue;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box3 {
    width: 12.5%;
    height: 125px;
    background: black;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box4 {
    width: 12.5%;
    height: 125px;
    background: coral;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box5 {
    width: 12.5%;
    height: 125px;
    background: crimson;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box6 {
    width: 12.5%;
    height: 125px;
    background: forestgreen;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box7 {
    width: 12.5%;
    height: 125px;
    background: darkorchid;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box8 {
    width: 12.5%;
    height: 125px;
    background: hotpink;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box9 {
    width: 12.5%;
    height: 125px;
    background: indigo;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
.boxDiv .boxes .box10 {
    width: 12.5%;
    height: 125px;
    background: dodgerblue;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}
/*END MIDDLE CONTENT STYLING*/

/*BEGIN homeContainer2 STYLING*/
.homeContainer2 {
    display: flex;
    justify-content: center;
}

.homeContainer2 div {
    width: 30%;
    padding: 0 3%;
    margin-bottom:1%;
}
.homeContainer2 p{ 
    text-align:left;
	line-height: 2;
}
/*END BOTTOM CONTENT STYLING*/

/*BEGIN FOOTER STYLING*/
footer {
    background: black;
    height: 8vh;
    width:90%;
    margin:auto;
}
footer nav a {
    color: white; 
}
/*END FOOTER STYLNG*/
/*END HOME PAGE STYLING*/


/*START ABOUT PAGE STYLING*/
* {
    box-sizing: border-box;
    padding:0;
    margin:0;
    max-width:100%;
}

body {
    max-width: 100%;
}
/*BEGIN HEADER STYLING*/
header{
    height:15vh;
}

nav {
    display:flex;
    justify-content: space-between;	
}


.links2 {
    width:80%;
    display:flex;
    justify-content: space-evenly;
    align-items: center;
    padding-top:5%;
}



nav a{
	color: black;
	text-decoration: none;
}
/*END HEADER STYLING*/
/*BEGIN TOP CONTAINER STYLING*/
.container2{
    display:flex;
    width: 75%;
    margin: 0 auto;
    border-bottom: 1px dashed black;
}
/*END TOP CONTAINER STYLING*/
/*BEGIN MIDDLE STYLING*/
h4 {
	height:40px;
	width:140px;
	border:1px solid black;
	background: white; 
    margin-top: 3%;
    display:flex; 
    align-items: center;
    justify-content: center;
}

.middle2{
    display:flex;
    justify-content: space-around;
    width:80%;
    margin:0 auto;
  
}

.container3 {
    border-bottom:1px dashed black;
    height:500px;
	width: 450px;
	text-align:left;
    line-height: 1.5;
    
}


/*END MIDDLE STYLING*/
/*BEGIN BOTTOM STYLING*/
.bottomContainer2{
    display:flex;
    width: 75%;
    margin: 0 auto;
}
/*END BOTTOM STYLING*/
#footer2 {
    background: black;
    height: 8vh;
    margin: 0 auto;
    width: 80%;
}

    
footer nav {
    display:flex;
    justify-content: space-around;
    width: 80%;
}

footer nav a {
    color: white;
    margin-top: 2%;
}
/*END ABOUT PAGE STYING*/

